syntax = "proto3";
package node.v1;

option go_package = "gen/node/v1";

service Node {
  rpc DiscoverPeers (Empty) returns (PeersReply);
  rpc LastBlock (Empty) returns (BlockReply);
  rpc MineBlock (Empty) returns (BlockReply);
}

message PeersReply {
  repeated string message = 1;
}

message BlockReply {
  Block Block = 1;
}

message Empty {

}

message Transaction {
  string Sender = 1;
  string Receiver = 2;
  uint64 Amount = 3;
}

message Block {
  string   Hash = 1;
  string   PreviousHash = 2;
  repeated Transaction Data = 3;
  int64    Timestamp = 4;
  uint64   Nonce = 5;
  Block    Next = 6;
  Block    Previous = 7;
}